# aoc-2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md  create-day.sh  run.sh  submit.sh
01-secret-entrance/: main.cc
02-gift-shop/: main.cc
03-lobby/: main.cc
04-printing-department/: main.cc
05-cafeteria/: main.cc
06-trash-compactor/: main.cc
07-laboratories/: main.cc
08-playground/: main.cc
09-movie-theater/: main.cc
10-factory/: main.cc
11-reactor/: main.cc
12-christmas-tree-farm/: main.cc
include/: util.h
